--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
       "method-override": "^3.0.0",
       "mysql": "^2.17.1",
       "nunjucks": "^3.2.0",
-      "req-flash": "0.0.3"
+      "req-flash": "0.0.3",
+      "set-value": ">=2.0.1",
+      "mixin-deep": ">=1.3.2"
    },
    "devDependencies": {
-      "nodemon": "^1.19.4"
+      "nodemon": "^2.0.2"
    }
 }
